# streamly-archive

./: .gitignore  .hlint.yaml  .travis.yml  ChangeLog.md  README.md  flake.nix  garnix.yaml  hie.yaml  package.yaml  stack.yaml  streamly-archive.cabal
.github/workflows/: ci.yaml
bench/: .gitignore  README.md  bench-archive-plain.hs  bench-archive-streamly.hs  bench-archive.c  bench.cabal  bench.hs  bench.sh  flake.nix  hie.yaml  package.yaml  stack.yaml
bench/results/: README.md  stdout.txt
bench/results/csv/: read.csv
test/: ReadmeMain.hs  TestSuite.hs
test/data/: sparse.tar
