cabal-version:  3.0
name:           bench
version:        0.1.0.0
build-type:     Simple

executable bench
  main-is: bench.hs
  other-modules:
      Paths_bench
  ghc-options: -Wall -optc-O2 -O2 -threaded -rtsopts -with-rtsopts=-N
  cc-options: -Wall -O2
  extra-libraries:
      archive
  build-depends:
      base >=4.7 && <5
    , bytestring
    , statistics
    , streamly
    , streamly-core
    , streamly-archive
    , text
    , turtle
    , vector
  default-language: Haskell2010

executable bench-archive-plain
  main-is: bench-archive-plain.hs
  other-modules:
      Paths_bench
  ghc-options: -Wall -optc-O2 -O2 -threaded -rtsopts -with-rtsopts=-N
  cc-options: -Wall -O2
  extra-libraries:
      archive
  build-depends:
      base >=4.7 && <5
    , bytestring
    , statistics
    , streamly
    , streamly-core
    , streamly-archive
    , text
    , turtle
    , vector
  default-language: Haskell2010

executable bench-archive-streamly
  main-is: bench-archive-streamly.hs
  other-modules:
      Paths_bench
  ghc-options: -Wall -optc-O2 -O2 -threaded -rtsopts -with-rtsopts=-N
  cc-options: -Wall -O2
  extra-libraries:
      archive
  build-depends:
      base >=4.7 && <5
    , bytestring
    , statistics
    , streamly
    , streamly-core
    , streamly-archive
    , text
    , turtle
    , vector
  default-language: Haskell2010
