cabal-version:  3.0
name:           bench
version:        0.1.0.0
build-type:     Simple

flag fusion-plugin
  description: Use fusion plugin for for best performance
  manual: True
  default: False

executable bench
  main-is: bench.hs
  other-modules:
      Paths_bench
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , statistics
    , streamly
    , streamly-core
    , streamly-archive
    , text
    , time
    , turtle
    , vector
  default-language: Haskell2010

executable bench-archive-plain
  main-is: bench-archive-plain.hs
  other-modules:
      Paths_bench
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , statistics
    , streamly
    , streamly-core
    , streamly-archive
    , text
    , turtle
    , vector
  default-language: Haskell2010

executable bench-archive-streamly
  main-is: bench-archive-streamly.hs
  other-modules:
      Paths_bench
  ghc-options:
    -Wall
    -O2
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -fdicts-strict
    -fmax-worker-args=16
    -fspec-constr-recursive=16
  build-depends:
      base >=4.7 && <5
    , bytestring
    -- For simplicity, activating fusion-plugin always. (If this was only included under the
    -- fusion-plugin flag, we would have to manually deal with this dependency in flake.nix.)
    , fusion-plugin
    , statistics
    , streamly
    , streamly-core
    , streamly-archive
    , text
    , turtle
    , vector

  -- Without this, "cabal repl bench-archive-streamly" doesn’t work.
  if flag(fusion-plugin)
    ghc-options: -fplugin Fusion.Plugin

  default-language: Haskell2010
